...
                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                        <subviews>
                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" hasAttributedTitle="YES" translatesAutoresizingMaskIntoConstraints="NO" id="Bpf-cr-z9E">
                                <rect key="frame" x="108" y="326" width="159" height="35.5"/>
                                <state key="normal">
                                    <attributedString key="attributedTitle">
                                        <fragment content="CHANGE COLOR">
                                            <attributes>
                                                <color key="NSColor" red="0.14343" green="0.14351" blue="0.14344000000000001" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
                                                <font key="NSFont" size="20" name="SFCompactDisplay-Regular"/>
                                                <real key="NSKern" value="0.0"/>
                                                <paragraphStyle key="NSParagraphStyle" alignment="left" lineBreakMode="wordWrapping" baseWritingDirection="natural" tighteningFactorForTruncation="0.0" allowsDefaultTighteningForTruncation="NO">
                                                    <tabStops>
...
